intro header info added

--- a/index.html
+++ b/index.html
@@ -13,13 +13,37 @@
   <body>
     <!-- Header Area Start -->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <div class="header__inner">
-          <a class="header__logo" href="./index.html">
-            <img class="" src="./images/logo.svg" alt="logo" />
+          <a class="header__logo" href="#">
+            <img src="./images/logo.png" alt="logo" />
           </a>
+          <nav class="header__nav">
+            <ul class="header__nav-list">
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">Компания</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">Продукция</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">Рецепты</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">Где купить</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">События</a>
+              </li>
+              <li class="header__nav-item">
+                <a class="header__nav-link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
           <div class="hamburger">
-            <span></span>
+            <div class="hamburger__inner">
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
@@ -29,22 +53,94 @@
     <main>
       <!-- Intro area Start -->
       <section class="intro">
-        <div class="container">
-          <div class="intro__inner"></div>
+        <div class="container intro-container">
+          <div class="intro__inner">
+            <h1 class="intro__title">Вкус творчества</h1>
+          </div>
         </div>
+        <div class="intro__bot"></div>
       </section>
       <!-- Intro area End -->
+
+      <!-- Info area Start -->
+      <section class="info">
+        <div class="container info-container">
+          <div class="info__inner">
+            <div class="info__img">
+              <img src="./images/info/info-img.png" alt="info-img" />
+            </div>
+            <p class="info__text">
+              «Помидорка» радует покупателей уже более 25 лет. Мы отбираем только самые свежие <br />
+              и отборные овощи. Благодаря этому наша продукция остается качественной и такой вкусной. <br /><br />
+              С томатной пастой, кетчупами и соусами “Помидорка” так легко творить на кухне. Можно экспериментировать, а
+              можно готовить уже знакомую и такую любимую еду. “Помидорка” <br />помогает заботиться о себе, своей семье
+              и близких людях.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Info area End -->
+
+      <!-- about area Start -->
+      <section class="about">
+        <div class="container about-container">
+          <div class="about__inner">
+            <h2 class="about__title">Только натуральные продукты</h2>
+            <div class="about__items">
+              <div class="about__item">
+                <div class="about__item-img">
+                  <img src="./images/about/img-1.svg" alt="about-img" />
+                </div>
+                <p class="about__item-text">100% натуральный продукт</p>
+              </div>
+              <div class="about__item">
+                <div class="about__item-img">
+                  <img src="./images/about/img-2.svg" alt="about-img" />
+                </div>
+                <p class="about__item-text">Не содержит ГМО, консервантов и красителей</p>
+              </div>
+              <div class="about__item">
+                <div class="about__item-img">
+                  <img src="./images/about/img-3.svg" alt="about-img" />
+                </div>
+                <p class="about__item-text">С 1998 года на рынке</p>
+              </div>
+              <div class="about__item">
+                <div class="about__item-img">
+                  <img src="./images/about/img-4.svg" alt="about-img" />
+                </div>
+                <p class="about__item-text">Бережная постеризация сохраняет все полезные вещества</p>
+              </div>
+              <div class="about__item">
+                <div class="about__item-img">
+                  <img src="./images/about/img-5.svg" alt="about-img" />
+                </div>
+                <p class="about__item-text">Белее строгие стандарты качества, чем ГОСТ</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- about area End -->
+
+      <section class="buy">
+        <div class="container buy-container">
+          <div class="buy__inner">
+            <h2 class="buy__title">Где купить</h2>
+          </div>
+        </div>
+      </section>
     </main>
 
-      <!-- Footer area Start -->
+    <!-- Footer area Start -->
     <footer class="footer">
       <div class="container">
         <div class="footer__inner"></div>
       </div>
     </footer>
-      <!-- Footer area End -->
+    <!-- Footer area End -->
 
-      <!-- Js settings -->
+    <!-- Js settings -->
     <script src="./js/main.js"></script>
   </body>
 </html>
