--- a/index.html
+++ b/index.html
@@ -2834,7 +2834,7 @@
       <section class="player">
         <div class="container player-container">
           <div class="player__inner">
-            <video class="player__video" id="video-player" poster="./images/video/poster.webp">
+            <video class="player__video" id="video-player" preload="none" poster="./images/video/poster.webp">
               <source src="./videos/10.mp4" type="video/mp4" />
             </video>
             <div class="player__progress">
