--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <div id="preloader" class="preloader">
+    <!-- <div id="preloader" class="preloader">
       <div class="preloader__loader">
         <img loading="lazy" class="preloader__logo" src="./images/logo.webp" alt="logo" />
         <div class="preloader__progress">
           <div class="preloader__progress-inner"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Header Area Start -->
     <header class="header">
