--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <!-- Header Area Start -->
-    <!-- <div id="preloader" class="preloader">
+    <div id="preloader" class="preloader">
       <div class="preloader__loader">
         <img class="preloader__logo" src="./images/logo.webp" alt="logo" />
         <div class="preloader__progress">
           <div class="preloader__progress-inner"></div>
         </div>
       </div>
-    </div> -->
+    </div>
     <header class="header">
       <div class="container header-container">
         <div class="header__inner">
@@ -64,7 +64,7 @@
       <!-- Intro area Start -->
       <section class="intro">
         <div class="container intro-container">
-          <div class="intro__inner" data-aos="fade-up" data-aos-delay="500">
+          <div class="intro__inner" data-aos="fade-up" data-aos-delay="1500">
             <h1 class="intro__title">Вкус творчества</h1>
           </div>
         </div>
